--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>5.4.0.1</version>
+        </dependency>
     </dependencies>
 
 </project>
